--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <div class="container">
             <div class="row py-3">
                 <div class="col-12">
-                    <h1 class="py-4">Noticias en colores, arte de Paula Simonetti</h1>
-                    <p>Paula Simonetti, diseñadora gráfica y periodísta argentina que da luz a las páginas de diarios como La Repubblica con ilustraciones fuera de lo común para temas comunes. En particular, ilustró sobre diversos tópicos como Alzhaimer, nutrición, maternidad, entre otros.  </p>
-                    <p>La diseñadora agrega color a las páginas del diario y genera la sensación de querer realmente informarse sobre el tema, dado el atractivo de las gráficas y figuras, en las cuales generalmente incluye ilustraciones u cuadros icónicos que relaciona con los tópicos de la noticia. Entre sus trabajos mencionados anteriormente, la artista publicó una ilustración que debate a los candidatos en 2016 Clinton y Trump sobre las elecciones en Estados Unidos, lo cual grafica ambas ideologías y personalidades.</p>
+                    <h1 class="py-4">Noticias en colores: Arte de Paula Simonetti</h1>
+                    <p>Paula Simonetti, diseñadora gráfica y periodísta argentina que da luz a las páginas de diarios como La Repubblica con ilustraciones fuera de lo común para temas comunes. En particular, ilustró sobre diversos tópicos como Alzheimer, nutrición, maternidad, entre otros.  </p>
+                    <p>La diseñadora agrega color a las páginas del diario y genera la sensación de querer realmente informarse sobre el tema, dado el atractivo de las gráficas y figuras. En cada artículo, generalmente incluye ilustraciones u cuadros icónicos que relaciona con los tópicos de la noticia. Entre sus trabajos mencionados anteriormente, la artista publicó una ilustración que debate a los candidatos en 2016 Clinton y Trump sobre las elecciones en Estados Unidos, lo cual grafica ambas ideologías y personalidades.</p>
                 </div>
             </div>
             <div class="row">
