--- a/index.html
+++ b/index.html
@@ -104,6 +104,16 @@
                     <img src="img/img5.jpg" class="img-fluid shadow-sm" />
                     <figcaption class="pt-1 pb-2 px-2 small">L'America che verrà, en esta ilustración contingente al periodo de elecciones por la presidencia de Estados Unidos, la artista compara ambos candidatos según lo que plantean en los debates y sus ideologías. Además, usa los colores icónicos para diferenciar Demócratas y Republicanos en Estados Unidos. </figcaption>
                 </figure>
+                <!--Imagen 7-->
+                <figure class="col-12 col-lg-6">
+                    <img src="img/img7.png" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Due settimane di yoga e torna il sereno: Como alternativa a las noticias mostradas anteriormente, la periodista genera esta ilustración para mostrar los beneficios del yoga y la medicina natural. Los colores muestran alegría y paz que junto con las ilustraciones llaman a tener una vida saludable.</figcaption>
+                </figure>
+                <!--Imagen 8-->
+                <figure class="col-12 col-lg-6">
+                    <img src="img/img8.png" class="img-fluid shadow-sm" />
+                    <figcaption class="pt-1 pb-2 px-2 small">Analogía entre tratamiento de una enfermedad y un juego de dardos, en la cual muestra como ambos tratamientos apuntan a un mismo objetivo. Los colores son limpios y las imagenes ilustran perfectamente su objetivo.</figcaption>
+                </figure>
 
                 <!--si quieres eliminar imágenes, elimina desde el comentario con el número hasta aquí-->
             </div>
