--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             }
             figure figcaption {
                 position: absolute;
-                bottom: -2rem;
+                bottom: -8rem;
                 left: 0.95rem;
                 margin:0;
-                background: rgba(255, 255, 255, 0.5);
+                background: rgba(173, 216, 230, 0.8);
             }
             figure:hover figcaption {
                 bottom: 0;
@@ -70,44 +70,44 @@
                 <div class="col-12">
                     <h1 class="py-4">Noticias en colores: Arte de Paula Simonetti</h1>
                     <p>Paula Simonetti, diseñadora gráfica y periodísta argentina que da luz a las páginas de diarios como La Repubblica con ilustraciones fuera de lo común para temas comunes. En particular, ilustró sobre diversos tópicos como Alzheimer, nutrición, maternidad, entre otros.  </p>
-                    <p>La diseñadora agrega color a las páginas del diario y genera la sensación de querer realmente informarse sobre el tema, dado el atractivo de las gráficas y figuras. En cada artículo, generalmente incluye ilustraciones u cuadros icónicos que relaciona con los tópicos de la noticia. Entre sus trabajos mencionados anteriormente, la artista publicó una ilustración que debate a los candidatos en 2016 Clinton y Trump sobre las elecciones en Estados Unidos, lo cual grafica ambas ideologías y personalidades.</p>
+                    <p>La diseñadora agrega color a las páginas del diario y genera la sensación de querer realmente informarse sobre el tema, dado el atractivo de las gráficas y figuras. En cada artículo, generalmente incluye ilustraciones u cuadros icónicos que relaciona con los tópicos de la noticia. Entre sus trabajos mencionados anteriormente, la artista publicó una ilustración que debate a los candidatos en 2016 Clinton y Trump sobre las elecciones en Estados Unidos, lo cual grafíca ambas ideologías y personalidades.</p>
                 </div>
             </div>
             <div class="row">
                 <!--Imagen 1-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img1.jpg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">La dieta non basta Alla pancia ci pensa il bisturi: Ilustración muestra cómo las mujeres piensan en la cirugía para ''corregir'' los cuerpos, en especial a partir de la abdominoplastía. La gráfica colorida muestra distintos tipos de mujeres y cuerpos con la imagen central de 'El nacimiento de Venus'. https://blogs.20minutos.es/visual20/2016/07/02/mujeres-infografistas-mujeres-paula-simonetti/ </figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>La dieta non basta Alla pancia ci pensa il bisturi</em> : Ilustración muestra cómo las mujeres piensan en la cirugía para ''corregir'' los cuerpos, en especial a partir de la abdominoplastía. La gráfica colorida muestra distintos tipos de mujeres y cuerpos con la imagen central de 'El nacimiento de Venus'. https://blogs.20minutos.es/visual20/2016/07/02/mujeres-infografistas-mujeres-paula-simonetti/ </figcaption>
                 </figure>
                 <!--Imagen 2-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img2.jpeg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Metti in banca il latte, salva un neonato: La ilustración central muestra a 'La madonna lista' que da leche a su hijo. Esta ilustración contiene colores más cálidos para hablar de la maternidad y los beneficios de guardar la leche materna. </figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>Metti in banca il latte, salva un neonato</em>: La ilustración central muestra a 'La madonna lista' que da leche a su hijo. Esta ilustración contiene colores más cálidos para hablar de la maternidad y los beneficios de guardar la leche materna. </figcaption>
                 </figure>
                 <!--Imagen 3-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img6.jpg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Ho un bersaglio che mi batte in testa: Ilustración que intenta reflejar el dolor de cabeza y males similares. Esta tiene como imagen central la ilustración “L’intransigeant", quien grita de dolor. Los colores celestes y anaranjados mostrarían la composición entre la medicina y el dolor.</figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>Ho un bersaglio che mi batte in testa</em>: Ilustración que intenta reflejar el dolor de cabeza y males similares. Esta tiene como imagen central la ilustración “L’intransigeant", quien grita de dolor. Los colores celestes y anaranjados mostrarían la composición entre la medicina y el dolor.</figcaption>
                 </figure>
                 <!--Imagen 4-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img4.jpeg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Viaggio in treno tra frammenti di memoria, el artículo muestra la causa del Alzheimer y relaciona la enfermedad con diversas vías del tren. Los colores más oscuros que las imágenes anteriores señalan la dureza de la enfermedad.</figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>Viaggio in treno tra frammenti di memoria</em>, el artículo muestra la causa del Alzheimer y relaciona la enfermedad con diversas vías del tren. Los colores más oscuros que las imágenes anteriores señalan la dureza de la enfermedad.</figcaption>
                 </figure>
                 <!--Imagen 5-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img3.jpg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Un'assicurazione ti allunga la vita. Un seguro de vida te alarga la vida, el artículo muestra de forma gráica ciertas proyecciones y deducciones sobre el uso de seguros de vida. La diseñadora muestra una combinación de euros como fondo de la ilustración junto con distintos gráficos numéricos.</figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>Un'assicurazione ti allunga la vita</em>. Un seguro de vida te alarga la vida, el artículo muestra de forma gráica ciertas proyecciones y deducciones sobre el uso de seguros de vida. La diseñadora muestra una combinación de euros como fondo de la ilustración junto con distintos gráficos numéricos.</figcaption>
                 </figure>
                 <!--Imagen 6-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img5.jpg" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">L'America che verrà, en esta ilustración contingente al periodo de elecciones por la presidencia de Estados Unidos, la artista compara ambos candidatos según lo que plantean en los debates y sus ideologías. Además, usa los colores icónicos para diferenciar Demócratas y Republicanos en Estados Unidos. </figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>L'America che verrà</em>, en esta ilustración contingente al periodo de elecciones por la presidencia de Estados Unidos, la artista compara ambos candidatos según lo que plantean en los debates y sus ideologías. Además, usa los colores icónicos para diferenciar Demócratas y Republicanos en Estados Unidos. </figcaption>
                 </figure>
                 <!--Imagen 7-->
                 <figure class="col-12 col-lg-6">
                     <img src="img/img7.png" class="img-fluid shadow-sm" />
-                    <figcaption class="pt-1 pb-2 px-2 small">Due settimane di yoga e torna il sereno: Como alternativa a las noticias mostradas anteriormente, la periodista genera esta ilustración para mostrar los beneficios del yoga y la medicina natural. Los colores muestran alegría y paz que junto con las ilustraciones llaman a tener una vida saludable.</figcaption>
+                    <figcaption class="pt-1 pb-2 px-2 small"><em>Due settimane di yoga e torna il sereno</em>: Como alternativa a las noticias mostradas anteriormente, la periodista genera esta ilustración para mostrar los beneficios del yoga y la medicina natural. Los colores muestran alegría y paz que junto con las ilustraciones llaman a tener una vida saludable.</figcaption>
                 </figure>
                 <!--Imagen 8-->
                 <figure class="col-12 col-lg-6">
